--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -63,9 +63,9 @@
               </div>
               <div class="row py-2 text-secondary">
                 <div class="col-6">
-                  <i class="fas fa-bed"></i> Bedrooms: {{listing.bedroom}}</div>
+                  <i class="fas fa-bed"></i> Bedrooms: {{listing.bedrooms}}</div>
                 <div class="col-6">
-                  <i class="fas fa-bath"></i> Bathrooms: {{listing.bathroom}}</div>
+                  <i class="fas fa-bath"></i> Bathrooms: {{listing.bathrooms}}</div>
               </div>
               <hr>
               <div class="row py-2 text-secondary">
@@ -94,23 +94,39 @@
 
       <div class="row">
         <div class="col-md-12">
-          <ul class="pagination">
-            <li class="page-item disabled">
-              <a class="page-link" href="#">&laquo;</a>
-            </li>
-            <li class="page-item active">
-              <a class="page-link" href="#">1</a>
-            </li>
-            <li class="page-item">
-              <a class="page-link" href="#">2</a>
-            </li>
-            <li class="page-item">
-              <a class="page-link" href="#">3</a>
-            </li>
-            <li class="page-item">
-              <a class="page-link" href="#">&raquo;</a>
-            </li>
-          </ul>
+          {%if listings.has_other_pages%}
+            <ul class="pagination">
+                {%if listings.has_previous%}
+                  <li class="page-item ">
+                    <a class="page-link" href="?page={{listings.previous_page_number}}">&laquo;</a>
+                  </li>
+                {%else%}
+                    <li class="page-item disabled">
+                    <a class="page-link" href="#">&laquo;</a>
+                    </li>
+                {%endif%}
+                {%for i in listings.paginator.page_range%}
+                    {%if listings.number == i%}
+                        <li class="page-item active">
+                            <a  class="page-link">{{i}}</a>
+                        </li>
+                    {%else%}
+                    <li class="page-item">
+                        <a href="?page={{i}}" class="page-link">{{i}}</a>
+                    </li>
+                    {%endif%}
+                {%endfor%}
+                 {%if listings.has_next%}
+                  <li class="page-item ">
+                    <a class="page-link" href="?page={{listings.next_page_number}}">&raquo;</a>
+                  </li>
+                {%else%}
+                    <li class="page-item disabled">
+                    <a class="page-link" href="#">&raquo;</a>
+                    </li>
+                {%endif%}
+            </ul>
+            {%endif%}
         </div>
       </div>
     </div>
