--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,5 +1,6 @@
 {%extends 'base.html'%}
 {%load humanize%}
+{%block title%} | Welcome {% endblock %}
 {%block content%}
 <!DOCTYPE html>
 <html lang="en">
@@ -69,7 +70,8 @@
       </div>
     </div>
   </section>
-
+<!--  Alerts-->
+{%include 'partials/_alerts.html'%}
   <!-- Listings -->
   <section id="listings" class="py-5">
     <div class="container">
